# Paporot

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  changes.patch  final_test.txt  merged.patch  rerun_analyze.sh  setup_llm.sh
.Paporot/: paporot.db
.Paporot/cache/: code_change.json
.Paporot/contracts/: excalidraw.contract.yaml  html.contract.yaml  json.contract.yaml
.github/workflows/: paporot.yml
crates/paporot-analysis-types/: Cargo.toml
crates/paporot-core/: Cargo.toml
crates/paporot-core/src/: host.rs  lib.rs  main.rs  pipeline.rs  snapshot_analyzer.rs  snapshot_store.rs  suppressor.rs  types.rs
crates/paporot-core/src/analysis/: l1_ast.rs  l2_rules.rs  l3_llm_bridge.rs  mod.rs  preprocessor.rs  preprocessor_bridge.rs
crates/paporot-core/src/evidence/: confidence.rs  mod.rs  provider.rs
crates/paporot-core/src/report/: dashboard.rs  mod.rs
crates/paporot-validation/: Cargo.toml
crates/paporot-validation/src/: dataset.rs  lib.rs  main.rs  report.rs  runner.rs  types.rs
crates/paporot-validation/src/evaluator/: exact.rs  mod.rs  semantic.rs
crates/skill-sdk/: Cargo.toml
crates/skill-sdk/src/: host.rs  (+1 more)
crates/skills/: Cargo.toml
designs/: dashboard_html_template.txt  dashboard_sprint.md  dashboard_v2_new.txt  paporot-refactor.md  paporot-skill-system.md  paporot-v2-prd.md  paporot-v3-loop-engineering.md  verification-layer-design.md
docs/: architecture.md  dead-code-map.excalidraw  new-architecture.excalidraw  old-architecture.excalidraw  paporot-architecture-v2.excalidraw  paporot-architecture.excalidraw  project-audit.html  render_svg.py
docs/prd/: DESIGN.md  PRD_ADAPTERS_WRAPPER_REDACT.md  PRD_BEHAVIOR_EVAL.md  PRD_CAPABILITY_EVIDENCE.md  PRD_EXECUTION_TRACE.md  PRD_P0_STATE_MACHINE.md  PRD_P1_STV.md  PRD_P2_BCG.md  PRD_TRAJECTORY_DIFF.md  PRD_TRAJECTORY_REDESIGN.md  PRD_WEB_UI.md
docs/tests/: TEST_REPORT_P0.md  TEST_REPORT_P1_P2.md  TEST_REPORT_TRAJECTORY.md  TEST_SPEC.md  TEST_SPEC_P1_P2.md
paporot-dashboard/: dashboard_template.html  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
paporot-dashboard/src/: App.vue  template.html  types.ts
scripts/: analyze_all.sh  check_reports.sh  reanalyze_all.sh  setup_all.sh  setup_all_projects.sh  summary.sh  verify_v3.sh
speech/ppt/: index.html
speech/script/: speech-script.md
src/: agent.rs  cli.rs  config.rs  graph.rs  lib.rs  main.rs  prompts.rs  snapshot.rs  storage.rs  types.rs
src/analysis/: l1_ast.rs  l2_rules.rs  l3_llm_bridge.rs  mod.rs  preprocessor.rs  prompts.rs  types.rs
src/commands/: analyze.rs  coupling.rs  coverage.rs  diff.rs  feedback.rs  graph.rs  mod.rs  regression.rs  review.rs  risk.rs  snapshot.rs  state.rs  testmap.rs  trace.rs  trajectory.rs  trajectory_vector.rs  version.rs
src/dashboard/: cluster.rs  mod.rs
src/eval/: compare.rs  exporter.rs  grader.rs  mod.rs  regression.rs  runner.rs  task.rs  trend.rs  types.rs
src/evaler/: mod.rs  rules.rs  trends.rs  types.rs
src/evidence/: confidence.rs  mod.rs  provider.rs  types.rs
src/feedback_loop/: feedback_loader.rs  mod.rs
src/llm/: client.rs  mod.rs
src/report/: generator.rs  mod.rs
src/skills/: error_log.rs  mod.rs  registry.rs  schema_compat.rs  types.rs
src/storage/: cache.rs  mod.rs  timeline.rs
src/trace/: adapter.rs  adapter_registry.rs  error.rs  mod.rs  storage.rs  trace_snapshot_map.rs  types.rs  wrapper.rs
src/trajectory/: analysis.rs  cache.rs  classifier.rs  error.rs  hash.rs  mod.rs  report.rs  types.rs
src/verification/: contract.rs  evidence.rs  mod.rs  types.rs
tests/: integration_tests.rs
tests/fixtures/: deepseek_sample.jsonl  trace_empty.jsonl  trace_simple_a.jsonl  trace_simple_b.jsonl
(+114 files in other folders)
