[package]
name = "Paporot"
version = "0.1.0"
edition = "2021"
description = "AI 生成软件的行为版本控制与审计系统"

[lib]
name = "paporot"

[[bin]]
name = "paporot-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
colored = "2"
dirs = "5"
toml = "0.8"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
inventory = "0.3"
thiserror = "1"
semver = "1"
wasmtime = "30"
wasmtime-wasi = { version = "30", features = ["preview1"] }
paporot-analysis-types = { path = "crates/paporot-analysis-types" }

[dev-dependencies]
tempfile = "3"
