[workspace]
members = ["crates/*"]

[package]
name = "Paporot"
version = "0.4.0"
edition = "2021"
description = "AI Coding Agent Behavior Evaluation Platform"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
colored = "2"
dirs = "5"
toml = "0.8"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
inventory = "0.3"
thiserror = "1"
semver = "1"
sha2 = "0.10"
open = "5"
wasmtime = "30"
wasmtime-wasi = { version = "30", features = ["preview1"] }

[dev-dependencies]
tempfile = "3"
