[package]
name = "paporot-core"
version = "0.2.0"
edition = "2021"
description = "Paporot Core — compiles to wasm32-wasi for sandbox isolation"

[[bin]]
name = "paporot-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

[profile.release]
opt-level = "s"
lto = true
