[package]
name = "paporot-validation"
version = "0.1.0"
edition = "2021"
description = "Paporot Golden Dataset + Benchmark Runner + Evaluator"

[[bin]]
name = "paporot-benchmark"
path = "src/main.rs"

[dependencies]
Paporot = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
walkdir = "2"
