[package]
name = "paporot-skills"
version = "0.1.0"
edition = "2021"
description = "Paporot Analysis Skills (compiled to WASM)"

[[bin]]
name = "repository_understanding"
path = "src/bin/repository_understanding.rs"

[[bin]]
name = "module_discovery"
path = "src/bin/module_discovery.rs"

[[bin]]
name = "dependency_analysis"
path = "src/bin/dependency_analysis.rs"

[[bin]]
name = "runtime_flow_analysis"
path = "src/bin/runtime_flow_analysis.rs"

[[bin]]
name = "behavior_boundary_discovery"
path = "src/bin/behavior_boundary_discovery.rs"

[[bin]]
name = "architecture_doc_generator"
path = "src/bin/architecture_doc_generator.rs"

[[bin]]
name = "verification_runner"
path = "src/bin/verification_runner.rs"

[dependencies]
paporot-skill-sdk = { path = "../skill-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
